fix choice alignment for MC (images were out of alignment)

--- a/components/corespring/multiple-choice/src/client/styles.css
+++ b/components/corespring/multiple-choice/src/client/styles.css
@@ -98,7 +98,7 @@
     display: table-cell;
     padding-left: 10px;
     padding-right: 10px;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .view-multiple-choice .choice-holder.tile {
